Added python3-gdal library

--- a/xenial/Dockerfile
+++ b/xenial/Dockerfile
@@ -18,7 +18,8 @@ RUN apt-get update && apt-get install -y \
   zlib1g-dev \
   libffi-dev \
   libssl-dev \
-  language-pack-pt
+  language-pack-pt \
+  python3-gdal
 
 RUN dpkg-reconfigure locales
 # Set the locale
